--- a/hielo/index.html
+++ b/hielo/index.html
@@ -186,6 +186,8 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/css/main.css">#one, #two, #three {display:none}</script>
+			
 
 	</body>
 </html>
