--- a/hielo/index.html
+++ b/hielo/index.html
@@ -36,6 +36,7 @@
 						<header>
 
 							<p>VIVE LA EXPERIENCIA Y SIENTE LA MIRADA DEL  <a href="https://templated.co">PUROHIELO</a></p>
+							<h2>Hielo</h2>
 							
 							</header>
 					</div>
